@@ -2,8 +2,8 @@ Package: bnlearn
 Type: Package
 Title: Bayesian Network Structure Learning, Parameter Learning and
         Inference
-Version: 5.0.1
-Date: 2024-08-19
+Version: 5.0.2
+Date: 2025-01-05
 Depends: R (>= 4.4.0), methods
 Suggests: parallel, graph, Rgraphviz, igraph, lattice, gRbase, gRain
         (>= 1.3-3), Rmpfr, gmp
@@ -28,8 +28,8 @@ SystemRequirements: USE_C17
 License: GPL (>= 2)
 LazyData: yes
 NeedsCompilation: yes
-Packaged: 2024-08-19 16:16:27 UTC; fizban
+Packaged: 2025-01-05 17:16:54 UTC; fizban
 Author: Marco Scutari [aut, cre],
   Tomi Silander [ctb]
 Repository: CRAN
-Date/Publication: 2024-08-19 17:40:11 UTC
+Date/Publication: 2025-01-07 14:40:05 UTC
