@@ -1,0 +1,7 @@
+#ifndef SORTING_HEADER
+#define SORTING_HEADER
+
+void i_sort(int *array, int *indexes, int length);
+void d_sort(double *array, int *indexes, int length);
+
+#endif
